--- a/jpiere.fragment.org.adempiere.ui.zk/pom.xml
+++ b/jpiere.fragment.org.adempiere.ui.zk/pom.xml
@@ -1,12 +1,28 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <groupId>org.idempiere</groupId>
   <artifactId>jpiere.fragment.org.adempiere.ui.zk</artifactId>
   <packaging>eclipse-plugin</packaging>
   <name>jpiere.fragment.org.adempiere.ui.zk</name>
-  <parent>
-    <groupId>org.idempiere</groupId>
-	<artifactId>org.idempiere.parent</artifactId>
-	<version>7.1.0-SNAPSHOT</version>
-	<relativePath>../../../../../../../src/pleiades201912_JPiere71/org.idempiere.parent/pom.xml</relativePath>
-  </parent>
+  <version>7.1.0-SNAPSHOT</version>
+	<repositories>
+		<!-- add Mars repository to resolve dependencies -->
+		<repository>
+			<id>idempiereP2</id>
+			<layout>p2</layout>
+			<url>file:///opt/repos/idempiere/org.idempiere.p2/target/repository/</url>
+		</repository>
+	</repositories>
+
+	<build>
+		<plugins>
+			<plugin>
+				<!-- enable tycho build extension -->
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-maven-plugin</artifactId>
+				<version>1.3.0</version>
+				<extensions>true</extensions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
